# software-server

./: LICENSE  README.md
blender_server/: __init__.py  blender_util.py  command.py  pyproject.toml  server_.py
client/: README.md  pyproject.toml
client/src/software_client/: __init__.py  client.py  command.py
