[project]
name = "software-client"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "windwhiterain", email = "1712428442@qq.com"},
]
dependencies = ["numpy>=2.3.2"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
